@@ -83,8 +83,8 @@ func WTF(format string, v ...interface{}) {
 // Recover stops a panicking goroutine and logs an Error.
 func Recover(msg string) {
 	if r := recover(); r != nil {
-		msg := fmt.Sprintf("%s. Recovering, but please report this: %s.", msg, r)
+		msg := fmt.Sprintf("%s. Recovering, but please report this.", msg)
 		globalLogger().WithOptions(zap.AddCallerSkip(2)).
-			Error(msg, zap.Stack("stack"))
+			Error(msg, zap.Any("panic", r), zap.Stack("stack"))
 	}
 }
